# Algo1-Lab

./: .gitignore  CMakeLists.txt  README.md
Elab2/BinarySearchTrees/: Find.cpp  Insertion.cpp  ManualInsert.cpp
Elab2/Intro2/: Binary.cpp  BoxPattern.cpp  ElectionAge.cpp  ForDrill1.cpp  ForDrill2.cpp  HighestHP1.cpp  HighestHP2.cpp  Split.cpp  Tall.cpp  TallestCount.cpp
Elab2/LinkedLists/: listNode2.cpp  listNode3.cpp
Elab2/ListNode/: List_node1.cpp  List_node2.cpp  List_node3.cpp
Elab2/Sorting algorithms/: Bubble_sort.cpp  Insertion_sort.cpp  Selection_sort.cpp
Elab2/SortingAlgorithms/: BubbleSort.cpp  Bubble_sort.cpp  InsertionSort.cpp  Insertion_sort.cpp  Selection_sort.cpp
Elab2/binary_search_trees/: in_order.cpp  insertion.cpp
Elab2/intro1/: NextPrime.cpp  Reverse.cpp  Trucks.cpp  check-prime.cpp  classics-starts.cpp  close-enough.cpp  min-max.cpp  next-prime.cpp  whileLoop.cpp
Elab2/intro2/: easy_grading.cpp  election_age.cpp  for_drill1.cpp
Elab2/pointer/: BasicPointer2.cpp  CountChar.cpp  RemoveQuote.cpp  basic_pointer_1.cpp  basic_pointer_2.cpp  copystring.cpp  escape.cpp  passing_array_1.cpp  remove_quote.cpp
Grader/: Buckets.cpp  a2b.cpp  ant_eater.cpp  bestFirstSearch.cpp  division.cpp  exp.cpp  last_one.cpp  prime_factors.cpp  tetris.cpp  zooma1Hard.cpp  zooma1HardMetaras.cpp  zooma1LinkedList.cpp  zooma1easy.cpp
Grader/Week12/: exp.cpp  icecream1.cpp  stock_bot.cpp
Hello C++/: main.cpp
Learn/: binary_search_tree.cpp  depth-first-search.cpp  pointer.cpp  testFunction.cpp
mid63/: mid63_cards.cpp  mid63_change.cpp
(+19 files in other folders)
