cmake_minimum_required(VERSION 3.17)
project(Algo1_Lab)

set(CMAKE_CXX_STANDARD 14)

add_executable(Buckets Grader/Buckets.cpp)
add_executable(a2b Grader/a2b.cpp)
add_executable(division Grader/division.cpp)
add_executable(exp Grader/exp.cpp)
add_executable(last_one Grader/last_one.cpp)
add_executable(prime_factors Grader/prime_factors.cpp)
add_executable(ant_eater Grader/ant_eater.cpp)
add_executable(zooma1easy Grader/zooma1easy.cpp)
add_executable(check-prime Elab2/intro1/check-prime.cpp)
add_executable(classics-starts Elab2/intro1/classics-starts.cpp)
add_executable(close-enough Elab2/intro1/close-enough.cpp)
add_executable(min-max Elab2/intro1/min-max.cpp)
add_executable(next-prime Elab2/intro1/next-prime.cpp)
add_executable(Reverse Elab2/intro1/Reverse.cpp)
add_executable(Trucks Elab2/intro1/Trucks.cpp)
add_executable(whileLoop Elab2/intro1/whileLoop.cpp)
add_executable(easy_grading Elab2/intro2/easy_grading.cpp)
add_executable(election_age Elab2/intro2/election_age.cpp)
add_executable(basic_pointer_1 Elab2/pointer/basic_pointer_1.cpp)
add_executable(basic_pointer_2 Elab2/pointer/basic_pointer_2.cpp)
add_executable(passing_array_1 Elab2/pointer/passing_array_1.cpp)
add_executable(Bubble_sort Elab2/SortingAlgorithms/Bubble_sort.cpp)
add_executable(Insertion_sort Elab2/SortingAlgorithms/Insertion_sort.cpp)
add_executable(Selection_sort Elab2/SortingAlgorithms/Selection_sort.cpp)
add_executable(tetris Grader/tetris.cpp)